# SimpleRAG_APP

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  template_creator.py
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/core/: embeddings.py  rag_chain.py  ragas_evaluator.py  vector_store.py
tests/: test_health.py
